[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/UI/uni0553-webfont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/UI/button_selected.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/button_unpressed.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://src/UI/TimeTrialFinished.gd" type="Script" id=5]
[ext_resource path="res://sound/ui/button_press.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 8
extra_spacing_top = 2
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Label/colors/font_color = Color( 0.87451, 0.878431, 0.909804, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/icons/ = null
Label/styles/normal = null

[node name="TimeTrialFinished" type="Control"]
margin_right = 384.0
margin_bottom = 216.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 384.0
margin_bottom = 216.0
color = Color( 0.054902, 0.054902, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heading" type="Label" parent="."]
margin_left = 64.0
margin_top = 40.0
margin_right = 320.0
margin_bottom = 64.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.87451, 0.878431, 0.909804, 1 )
text = "Time trial completed!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewRecord" type="Label" parent="."]
visible = false
margin_left = 152.0
margin_top = 80.0
margin_right = 232.0
margin_bottom = 88.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.537255, 0.2, 1 )
text = "NEW RECORD!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Details" type="Label" parent="."]
margin_left = 64.0
margin_top = 80.0
margin_right = 320.0
margin_bottom = 144.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 0.87451, 0.878431, 0.909804, 1 )
text = "Apartment Complex - 1
your time: 00:00:00
best time: 00:00:00
game version: 0.0.3
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_left = 104.0
margin_top = 152.0
margin_right = 280.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="TextureButton" parent="Buttons"]
margin_left = 16.0
margin_top = 8.0
margin_right = 80.0
margin_bottom = 24.0
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 6 )
text = "retry"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TextureButton" parent="Buttons"]
margin_left = 96.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 24.0
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
theme = SubResource( 6 )
text = "main menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "sounds"

[connection signal="pressed" from="Buttons/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
